--- a/charts/posthog/Chart.yaml
+++ b/charts/posthog/Chart.yaml
@@ -5,7 +5,7 @@ icon: https://camo.githubusercontent.com/11f72f57f33d7d34807bafc1314844f7a91bcde
 kubeVersion: ">= 1.21-0 <= 1.24-0"
 home: https://posthog.com
 sources:
-  - https://github.com/PostHog/charts-clickhouse
+  - https://github.com/zeet-dev/helm-charts/tree/main/charts/posthog
 
 type: application
 
@@ -109,3 +109,5 @@ maintainers:
     email: guido@posthog.com
   - name: yakko
     email: yakko@posthog.com
+  - name: zeet
+    email: support@zeet.co
