--- a/charts/retool/Chart.yaml
+++ b/charts/retool/Chart.yaml
@@ -2,10 +2,13 @@ apiVersion: v2
 name: retool
 description: A Helm chart for Kubernetes
 type: application
-version: 4.11.5
+version: 0.4.11
+appVersion: 2.95.3
 maintainers:
   - name: Retool Engineering
     email: engineering+helm@retool.com
+  - name: zeet
+    email: support@zeet.co
 dependencies:
   - name: postgresql
     version: 10.14.3
