--- a/charts/retool/templates/ingress.yaml
+++ b/charts/retool/templates/ingress.yaml
@@ -26,8 +26,8 @@ spec:
   ingressClassName: {{ .Values.ingress.ingressClassName }}
   {{- end }}
   rules:
-    {{- if .Values.ingress.hostName }}
-    - host: {{ .Values.ingress.hostName | quote }}
+    {{- if .Values.ingress.hostname }}
+    - host: {{ .Values.ingress.hostname | quote }}
       http:
         paths:
           - path:
@@ -67,8 +67,17 @@ spec:
           {{- end }}
     {{- end }}
   {{- end }}
-{{- if .Values.ingress.tls }}
+{{- if or .Values.ingress.zeet.autoCert .Values.ingress.tls }}
   tls:
+  {{- if .Values.ingress.zeet.autoCert }}
+  - hosts:
+    - {{ .Values.ingress.hostname }}
+    {{- if .Values.ingress.zeet.autoCert }}
+    secretName: cert-{{ template "retool.fullname" . }}
+    {{- end }}
+  {{- end }}
+  {{- if .Values.ingress.tls }}
 {{ toYaml .Values.ingress.tls | indent 4 }}
+  {{- end }}
 {{- end -}}
 {{- end }}
